@@ -47,6 +47,7 @@ creme.dialog.Dialog = creme.component.Component.sub({
             shrink:     true,
             useFrameTitleBar: true,
             useFrameActions: true,
+            fillFrameOnError: false,
             closeOnEscape: true,
             scrollbackOnClose: true
         }, options || {});
@@ -56,10 +57,14 @@ creme.dialog.Dialog = creme.component.Component.sub({
 
     _initFrame: function(options) {
         var self = this;
-        var frame = this._frame = new creme.dialog.Frame({backend: options.backend, autoActivate: false});
+        var frame = this._frame = new creme.dialog.Frame({
+            backend: options.backend,
+            autoActivate: false,
+            fillOnError: options.fillFrameOnError
+        });
 
-        frame.onCleanup($.proxy(this._onFrameCleanup, this))
-             .onUpdate($.proxy(this._onFrameUpdate, this));
+        frame.onCleanup(this._onFrameCleanup.bind(this))
+             .onUpdate(this._onFrameUpdate.bind(this));
 
         if (options.fitFrame) {
             frame.on('fetch-fail submit-fail', function() {
@@ -229,12 +234,12 @@ creme.dialog.Dialog = creme.component.Component.sub({
 
     _appendButton: function(buttons, name, label, action, options) {
         var self = this;
-        var custom_labels = this.options.defaultButtonLabels || {};
+        var labels = this.options.defaultButtonLabels || {};
         options = options || {};
 
         var button = $.extend({
                             'name': name,
-                            'text': custom_labels[name] || label,
+                            'text': labels[name] || label,
                             'click': function(e) {
                                 action.apply(self, [$(this), e, options]);
                                 return false;
